Added blog post model

--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
-name = "template-model"
+name = "avid-rustacean-model"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+const_format = { version = "0.2" }
+array-concat = { version = "0.5" }
