--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,3 +16,4 @@ uuid = { version = "1.0", feature = ["v4"] }
 mongodb = { version = "2.3", features = ["tokio-runtime"] }
 futures = { version = "0.3" }
 troupe = "0.1.0"
+tower-http = { version = "0.4.4", features = ["cors"] }
