--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -20,3 +20,4 @@ web-sys = { version = "0.3", features = ["Window", "Screen"] }
 wasm-bindgen = { version = "0.2" }
 js-sys = { version = "0.3" }
 send_wrapper = "0.6.0"
+reqwest = { version = "0.11", features = ["json", "cookies"] }
