--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -21,3 +21,4 @@ wasm-bindgen = { version = "0.2" }
 js-sys = { version = "0.3" }
 send_wrapper = "0.6.0"
 reqwest = { version = "0.11", features = ["json", "cookies"] }
+derive_more = "0.99.17"
