--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# Standard deps
+avid-rustacean-model = { path = "../model", features = ["server"] }
 axum = { version = "0.6", features = ["macros"] }
 shuttle-runtime = { version = "0.31", features = [] }
 shuttle-shared-db = { version = "0.31", features = ["mongodb"] }
