--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -22,3 +22,5 @@ js-sys = { version = "0.3" }
 send_wrapper = "0.6.0"
 reqwest = { version = "0.11", features = ["json", "cookies"] }
 derive_more = "0.99.17"
+url-escape = "0.1.1"
+serde = { version = "1.0.193", features = ["derive"] }
