Fixes to the deployed on Shuttle

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-assets/*
+/assets/
 
 frontend/dist/*
 frontend/target
