--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -8,5 +8,8 @@ server = ["markdown", "syntect"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
+
+# Server-only
 markdown = { version = "1.0.0-alpha.16", optional = true }
 syntect = { version = "5.1.0", optional = true }
