--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,3 +18,7 @@ futures = { version = "0.3" }
 troupe = "0.1.0"
 tower-http = { version = "0.4.4", features = ["cors"] }
 http = { version = "0.2" }
+tracing = "0.1.40"
+
+[build-dependencies]
+flate2 = "1.0"
