--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,11 +10,11 @@ shuttle-runtime = { version = "0.31", features = [] }
 shuttle-shared-db = { version = "0.31", features = ["mongodb"] }
 shuttle-axum = { version = "0.31", features = [] }
 tokio = { version = "1.28", features = ["sync"] }
-serde = { version = "1.0" }
+serde = { version = "1.0", features = ["rc"] }
 serde_json = { version = "1.0" }
 uuid = { version = "1.0", feature = ["v4"] }
 mongodb = { version = "2.3", features = ["tokio-runtime"] }
-futures = { version = "0.3" }
+futures = "0.3"
 troupe = "0.1.0"
 tower-http = { version = "0.4.4", features = ["cors"] }
 http = { version = "0.2" }
