--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,7 +12,6 @@ shuttle-axum = { version = "0.35.1" }
 tokio = { version = "1.28", features = ["sync"] }
 serde = { version = "1.0", features = ["rc"] }
 serde_json = { version = "1.0" }
-uuid = { version = "1.0", feature = ["v4"] }
 mongodb = { version = "2.3", features = ["tokio-runtime"] }
 futures = "0.3"
 troupe = "0.1.0"
@@ -20,6 +19,8 @@ tower-http = { version = "0.4.4", features = ["cors"] }
 http = { version = "0.2" }
 tracing = "0.1.40"
 shuttle-secrets = "0.35.1"
+sha2 = "0.10.8"
+hex-literal = "0.4.1"
 
 [build-dependencies]
 flate2 = "1.0"
