--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -18,7 +18,7 @@ web-sys = { version = "0.3", features = ["Window", "Screen"] }
 wasm-bindgen = { version = "0.2" }
 js-sys = { version = "0.3" }
 send_wrapper = "0.6.0"
-reqwest = { version = "0.11", features = ["json", "cookies"] }
 derive_more = "0.99.17"
 url-escape = "0.1.1"
 serde = { version = "1.0.193", features = ["derive"] }
+gloo-net = { version = "0.5", features = ["json", "http"] }
