--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -11,9 +11,9 @@ opt-level="z"
 [dependencies]
 avid-rustacean-model = { path = "../model" }
 # Using my fork for now as I need access to the paragraph line count method that I implemented
-ratatui = { version = "0.24.1-alpha.6", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
-yew = { version = "0.20", features = ["csr"] }
-yew-router = { version = "0.17.0" }
+ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
+yew = { version = "0.21", features = ["csr"] }
+yew-router = { version = "0.18" }
 web-sys = { version = "0.3", features = ["Window", "Screen"] }
 wasm-bindgen = { version = "0.2" }
 js-sys = { version = "0.3" }
@@ -22,3 +22,4 @@ derive_more = "0.99.17"
 url-escape = "0.1.1"
 serde = { version = "1.0.193", features = ["derive"] }
 gloo-net = { version = "0.5", features = ["json", "http"] }
+implicit-clone = "=0.3.6"
