--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,7 +14,7 @@ avid-rustacean-model = { path = "../model" }
 ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
 yew = { version = "0.21", features = ["csr"] }
 yew-router = { version = "0.18" }
-web-sys = { version = "0.3", features = ["Window", "Screen"] }
+web-sys = { version = "0.3", features = ["Window", "Screen", "TouchEvent", "TouchList", "Touch"] }
 wasm-bindgen = { version = "0.2" }
 js-sys = { version = "0.3" }
 send_wrapper = "0.6.0"
