--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 # Reduces the binary size of the WASM file.
 lto = true
 opt-level="z"
+strip = true
+codegen-units = 1
+panic = "abort"
 
 [dependencies]
 avid-rustacean-model = { path = "../model" }
-# Using my fork for now as I need access to the paragraph line count method that I implemented
+webatui = { path = "../../webatui" }
 ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
 yew = { version = "0.21", features = ["csr"] }
 yew-router = { version = "0.18" }
