--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -13,7 +13,7 @@ panic = "abort"
 
 [dependencies]
 avid-rustacean-model = { path = "../model" }
-webatui = { path = "../../webatui" }
+webatui = { path = "../../webatui", features = ["gruvbox"] }
 ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
 yew = { version = "0.21", features = ["csr"] }
 yew-router = { version = "0.18" }
