--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -13,16 +13,13 @@ panic = "abort"
 
 [dependencies]
 avid-rustacean-model = { path = "../model" }
-webatui = { path = "../../webatui", features = ["gruvbox"] }
+webatui = { path = "../../webatui" }
 ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
 yew = { version = "0.21", features = ["csr"] }
 yew-router = { version = "0.18" }
-web-sys = { version = "0.3", features = ["Window", "Screen", "TouchEvent", "TouchList", "Touch"] }
-wasm-bindgen = { version = "0.2" }
-js-sys = { version = "0.3" }
-send_wrapper = "0.6.0"
 derive_more = "0.99.17"
 url-escape = "0.1.1"
 serde = { version = "1.0.193", features = ["derive"] }
 gloo-net = { version = "0.5", features = ["json", "http"] }
 implicit-clone = "=0.4.8"
+base16-palettes = { version = "0.1.0", features = ["gruvbox"] }
