--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 [dependencies]
 avid-rustacean-model = { path = "../model", features = ["server"] }
 axum = { version = "0.7", features = ["macros"] }
-shuttle-runtime = { version = "0.35.2" }
-shuttle-shared-db = { version = "0.35.2", features = ["mongodb"] }
-shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
+shuttle-runtime = { version = "0.39.0" }
+shuttle-shared-db = { version = "0.39.0", features = ["mongodb"] }
+shuttle-axum = { version = "0.39.0" }
 tokio = { version = "1.28", features = ["sync"] }
 serde = { version = "1.0", features = ["rc"] }
 serde_json = { version = "1.0" }
@@ -18,7 +18,7 @@ troupe = "0.1.0"
 tower-http = { version = "0.5", features = ["cors"] }
 http = { version = "1.0" }
 tracing = "0.1.40"
-shuttle-secrets = "0.35.2"
+shuttle-secrets = "0.39.0"
 sha2 = "0.10.8"
 hex-literal = "0.4.1"
 
