--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,21 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  code_cleaniness_checks:
+    name: Formatting Checks
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: nightly
+          components: rustfmt
+      - uses: actions/checkout@v4
+      - run: cargo fmt --check --package avid-rustacean-model
+      - run: cargo fmt --check --manifest-path frontend/Cargo.toml
+      - run: cargo fmt --check --package avid-rustacean-backend
   tests:
-    name: Tests
+    needs: code_cleaniness_checks
     runs-on: ubuntu-latest
     steps:
       - name: Setup Rust
@@ -33,3 +46,11 @@ jobs:
       - run: trunk build frontend/index.html
       - run: cargo build --package avid-rustacean-backend --verbose
       - run: cargo test --package avid-rustacean-backend --verbose
+  deployment:
+    if: github.event_name == 'push'
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: shuttle-hq/deploy-action@main
+        with:
+          deploy-key: ${{ secrets.SHUTTLE_API_KEY }}
