--- a/.github/workflows/ar_ci.yml
+++ b/.github/workflows/ar_ci.yml
@@ -33,3 +33,10 @@ jobs:
       - run: trunk build frontend/index.html
       - run: cargo build --package avid-rustacean-backend --verbose
       - run: cargo test --package avid-rustacean-backend --verbose
+  deployment:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: shuttle-hq/deploy-action@main
+        with:
+          deploy-key: ${{ secrets.SHUTTLE_API_KEY }}
