--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
       - run: cargo build --package avid-rustacean-backend --verbose
       - run: cargo test --package avid-rustacean-backend --verbose
   deployment:
+    if: github.event_name == 'push'
     needs: tests
     runs-on: ubuntu-latest
     steps:
