--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,7 +10,7 @@ shuttle-runtime = { version = "0.39.0" }
 shuttle-shared-db = { version = "0.39.0", features = ["mongodb"] }
 shuttle-axum = { version = "0.39.0" }
 tokio = { version = "1.28", features = ["sync"] }
-serde = { version = "1.0", features = ["rc"] }
+serde = { version = "1.0", features = ["rc", "derive"] }
 serde_json = { version = "1.0" }
 mongodb = { version = "2.3", features = ["tokio-runtime"] }
 futures = "0.3"
@@ -21,6 +21,8 @@ tracing = "0.1.40"
 shuttle-secrets = "0.39.0"
 sha2 = "0.10.8"
 hex-literal = "0.4.1"
+chrono = { version = "0.4", features = ["serde"] }
+toml = { version = "0.8.10", features = ["parse"] }
 
 [build-dependencies]
 flate2 = "1.0"
