--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,8 @@ sha2 = "0.10.8"
 hex-literal = "0.4.1"
 chrono = { version = "0.4", features = ["serde"] }
 toml = { version = "0.8.10", features = ["parse"] }
+rss = "2.0.7"
+url-escape = "0.1.1"
 
 [build-dependencies]
 flate2 = "1.0"
