--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,9 @@ jobs:
           rust-version: nightly
           components: rustfmt
       - uses: actions/checkout@v4
-      - run: cargo fmt --check --package avid-rustacean-model
-      - run: cargo fmt --check --manifest-path frontend/Cargo.toml
-      - run: cargo fmt --check --package avid-rustacean-backend
+      - run: cargo fmt --check --all
   tests:
+    name: Build and Testing Checks
     needs: code_cleaniness_checks
     runs-on: ubuntu-latest
     steps:
@@ -38,19 +37,35 @@ jobs:
         uses: jetli/trunk-action@v0.5.0
         with:
           version: 'latest'
-      - run: cargo build --package avid-rustacean-model --verbose
-      - run: cargo test --package avid-rustacean-model --verbose
       - run: wget -qO- https://github.com/thedodd/trunk/releases/download/v0.16.0/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - run: pwd >> $GITHUB_PATH
-      - run: cargo build --manifest-path frontend/Cargo.toml --verbose
-      - run: trunk build frontend/index.html
-      - run: cargo build --package avid-rustacean-backend --verbose
-      - run: cargo test --package avid-rustacean-backend --verbose
+      - run: cargo build --all --verbose
+      - run: cargo test --package avid-rustacean-model --verbose
+      - run: cargo test --package avid-rustacean-builder --verbose
+      - run: trunk build crates/frontend/index.html
   deployment:
-    if: github.event_name == 'push'
+    name: Deploy to GitHub Pages
     needs: tests
+    if: github.event_name == 'push'
+
     runs-on: ubuntu-latest
     steps:
-      - uses: shuttle-hq/deploy-action@main
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
         with:
-          deploy-key: ${{ secrets.SHUTTLE_API_KEY }}
+          rust-version: stable
+          components: rustfmt
+          targets: wasm32-unknown-unknown
+      - uses: actions/checkout@v4
+      - name: Fetch Trunk
+        uses: jetli/trunk-action@v0.5.0
+        with:
+          version: 'latest'
+      - run: wget -qO- https://github.com/thedodd/trunk/releases/download/v0.21.14/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+      - run: pwd >> $GITHUB_PATH
+      - run: scripts/compile_tui.sh
+      - name: Zola deploy
+        uses: shalzz/zola-deploy-action@master
+        env:
+          PAGES_BRANCH: gh-pages
+          GITHUB_TOKEN: ${{ secrets.PAGES_KEY }}
