--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,20 @@ jobs:
           rust-version: stable
           components: rustfmt
           targets: wasm32-unknown-unknown
-      - uses: actions/checkout@v4
       - name: Fetch Trunk
-        uses: jetli/trunk-action@v0.5.0
+        uses: jetli/trunk-action@v0.5.1
         with:
           version: 'latest'
-      - run: wget -qO- https://github.com/thedodd/trunk/releases/download/v0.16.0/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - run: pwd >> $GITHUB_PATH
+      - uses: actions/checkout@v4
       - run: cargo build --all --verbose
       - run: cargo test --package avid-rustacean-model --verbose
       - run: cargo test --package avid-rustacean-builder --verbose
-      - run: trunk build crates/frontend/index.html
+      - run: scripts/compile_tui.sh
   deployment:
     name: Deploy to GitHub Pages
     needs: tests
     if: github.event_name == 'push'
-
     runs-on: ubuntu-latest
     steps:
       - name: Setup Rust
@@ -58,10 +56,9 @@ jobs:
           targets: wasm32-unknown-unknown
       - uses: actions/checkout@v4
       - name: Fetch Trunk
-        uses: jetli/trunk-action@v0.5.0
+        uses: jetli/trunk-action@v0.5.1
         with:
           version: 'latest'
-      - run: wget -qO- https://github.com/thedodd/trunk/releases/download/v0.21.14/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - run: pwd >> $GITHUB_PATH
       - run: scripts/compile_tui.sh
       - name: Zola deploy
