--- a/config.toml
+++ b/config.toml
@@ -19,8 +19,7 @@ taxonomies = [
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-# highlight_theme = "gruvbox-dark"
-highlight_theme = "ayu-mirage"
+highlight_theme = "gruvbox-dark"
 highlight_code = true
 render_emoji = true
 
